--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc -p src -w",
-    "start": "live-server --open=src"
+    "tsc": "tsc -p app -w",
+    "start": "live-server ./app"
   },
   "keywords": [],
   "author": "Ahmet Atasoy <menthena@gmail.com> (http://www.menthena.com/)",
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-alpha.44",
-    "systemjs": "0.19.2"
+    "systemjs": "^0.19.2"
   },
   "devDependencies": {
+    "browser-sync": "^2.10.0",
+    "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-sass": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^3.6.0",
+    "gulp-typescript": "^2.9.2",
     "live-server": "^0.8.2",
+    "run-sequence": "^1.1.4",
+    "scssify": "^0.3.6",
+    "superstatic": "^3.0.0",
     "typescript": "^1.6.2"
   }
 }
