--- a/package.json
+++ b/package.json
@@ -11,21 +11,62 @@
   "author": "Ahmet Atasoy <menthena@gmail.com> (http://www.menthena.com/)",
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-alpha.44",
-    "systemjs": "^0.19.2"
+    "angular2": "2.0.0-alpha.46",
+    "bootstrap": "^3.3.6",
+    "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
+    "lodash-node": "^3.10.1",
+    "systemjs": "^0.19.2",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "body-parser": "~1.0.0",
     "browser-sync": "^2.10.0",
+    "chai": "^3.4.1",
+    "compression": "^1.4.4",
+    "connect-livereload": "^0.4.0",
+    "cookie-parser": "~1.3.4",
+    "debug": "~0.7.4",
+    "del": "^2.1.0",
+    "ejs": "^2.3.1",
+    "errorhandler": "~1.1.1",
+    "es6-module-loader": "^0.17.8",
+    "express": "~4.11.2",
+    "express-session": "~1.6.5",
+    "express-sslify": "^0.1.2",
     "gulp": "^3.9.0",
     "gulp-clean": "^0.3.1",
+    "gulp-nodemon": "^2.0.4",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^3.6.0",
     "gulp-typescript": "^2.9.2",
+    "jasmine-core": "^2.3.4",
+    "jspm": "^0.16.15",
+    "karma": "^0.13.15",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-coverage": "^0.5.3",
+    "karma-jasmine": "^0.3.6",
+    "karma-jasmine-html-reporter": "^0.1.8",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs2-launcher": "^0.3.2",
+    "karma-systemjs": "^0.9.0",
+    "karma-typescript-preprocessor": "0.0.21",
     "live-server": "^0.8.2",
+    "method-override": "~2.1.1",
+    "mocha": "^2.3.4",
+    "morgan": "~1.0.0",
+    "phantomjs": "^1.9.19",
+    "phantomjs-polyfill": "0.0.1",
+    "prismic.io": "1.1.7",
+    "requirejs": "^2.1.22",
     "run-sequence": "^1.1.4",
     "scssify": "^0.3.6",
+    "static-favicon": "~1.0.0",
     "superstatic": "^3.0.0",
+    "traceur": "0.0.92",
     "typescript": "^1.6.2"
   }
 }
