--- a/tsTestConfig.json
+++ b/tsTestConfig.json
@@ -7,6 +7,73 @@
     "target": "es5",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "defaultJSExtension": true
+    "defaultJSExtension": true,
+    "transpiler": "typescript",
+    "paths": {
+      "github:*": "jspm_packages/github/*",
+      "npm:*": "jspm_packages/npm/*"
+    },
+    "map": {
+      "lodash": "npm:lodash@3.10.1",
+      "typescript": "npm:typescript@1.7.3",
+      "github:jspm/nodelibs-assert@0.1.0": {
+        "assert": "npm:assert@1.3.0"
+      },
+      "github:jspm/nodelibs-process@0.1.2": {
+        "process": "npm:process@0.11.2"
+      },
+      "github:jspm/nodelibs-util@0.1.0": {
+        "util": "npm:util@0.10.3"
+      },
+      "npm:assert@1.3.0": {
+        "util": "npm:util@0.10.3"
+      },
+      "npm:inherits@2.0.1": {
+        "util": "github:jspm/nodelibs-util@0.1.0"
+      },
+      "npm:lodash@3.10.1": {
+        "process": "github:jspm/nodelibs-process@0.1.2"
+      },
+      "npm:process@0.11.2": {
+        "assert": "github:jspm/nodelibs-assert@0.1.0"
+      },
+      "npm:util@0.10.3": {
+        "inherits": "npm:inherits@2.0.1",
+        "process": "github:jspm/nodelibs-process@0.1.2"
+      }
+    }
+  },
+  "paths": {
+    "github:*": "jspm_packages/github/*",
+    "npm:*": "jspm_packages/npm/*"
+  },
+  "map": {
+    "lodash": "npm:lodash@3.10.1",
+    "typescript": "npm:typescript@1.7.3",
+    "github:jspm/nodelibs-assert@0.1.0": {
+      "assert": "npm:assert@1.3.0"
+    },
+    "github:jspm/nodelibs-process@0.1.2": {
+      "process": "npm:process@0.11.2"
+    },
+    "github:jspm/nodelibs-util@0.1.0": {
+      "util": "npm:util@0.10.3"
+    },
+    "npm:assert@1.3.0": {
+      "util": "npm:util@0.10.3"
+    },
+    "npm:inherits@2.0.1": {
+      "util": "github:jspm/nodelibs-util@0.1.0"
+    },
+    "npm:lodash@3.10.1": {
+      "process": "github:jspm/nodelibs-process@0.1.2"
+    },
+    "npm:process@0.11.2": {
+      "assert": "github:jspm/nodelibs-assert@0.1.0"
+    },
+    "npm:util@0.10.3": {
+      "inherits": "npm:inherits@2.0.1",
+      "process": "github:jspm/nodelibs-process@0.1.2"
+    }
   }
 }
