--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash-node": "^3.10.1",
     "rxjs": "^5.0.0-alpha.11",
     "systemjs": "^0.19.2",
+    "socket.io": "^1.3.7",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
@@ -73,6 +74,7 @@
     "requirejs": "^2.1.22",
     "run-sequence": "^1.1.4",
     "scssify": "^0.3.6",
+    "socket.io-client": "^1.3.7",
     "static-favicon": "~1.0.0",
     "superstatic": "^3.0.0",
     "traceur": "0.0.92",
@@ -81,7 +83,8 @@
   "jspm": {
     "dependencies": {
       "lodash": "npm:lodash@^3.10.1",
-      "rxjs": "npm:rxjs@^5.0.0-alpha.12"
+      "rxjs": "npm:rxjs@^5.0.0-alpha.12",
+      "socket.io-client": "github:socketio/socket.io-client@^1.3.7"
     },
     "devDependencies": {
       "typescript": "npm:typescript@^1.6.2"
