--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "lodash-node": "^3.10.1",
+    "moment": "^2.10.6",
     "rxjs": "^5.0.0-alpha.11",
-    "systemjs": "^0.19.2",
     "socket.io": "^1.3.7",
+    "systemjs": "^0.19.2",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
@@ -83,6 +84,7 @@
   "jspm": {
     "dependencies": {
       "lodash": "npm:lodash@^3.10.1",
+      "moment": "npm:moment@^2.10.6",
       "rxjs": "npm:rxjs@^5.0.0-alpha.12",
       "socket.io-client": "github:socketio/socket.io-client@^1.3.7"
     },
