--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "author": "Ahmet Atasoy <menthena@gmail.com> (http://www.menthena.com/)",
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-alpha.48",
+    "angular2": "2.0.0-beta.0",
     "bootstrap": "^3.3.6",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "lodash-node": "^3.10.1",
     "moment": "^2.10.6",
-    "rxjs": "^5.0.0-alpha.11",
     "socket.io": "^1.3.7",
-    "systemjs": "^0.19.2",
+    "systemjs": "0.19.6",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.0",
+    "zone.js": "0.5.10",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
@@ -85,7 +89,8 @@
     "dependencies": {
       "lodash": "npm:lodash@^3.10.1",
       "moment": "npm:moment@^2.10.6",
-      "rxjs": "npm:rxjs@^5.0.0-alpha.12",
+      "reflect-metadata": "npm:reflect-metadata@^0.1.2",
+      "rxjs": "npm:rxjs@5.0.0-beta.0",
       "socket.io-client": "github:socketio/socket.io-client@^1.3.7"
     },
     "devDependencies": {
