Working on Floors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "compileOnSave": false,
     "removeComments": false,
     "noImplicitAny": false
   },
@@ -16,6 +17,7 @@
     "./client/app/app.ts",
     "./client/app/components/accounts/accounts.ts",
     "./client/app/components/common/appwide-overlay.ts",
+    "./client/app/components/common/footer.ts",
     "./client/app/components/common/header.ts",
     "./client/app/components/common/overlay.ts",
     "./client/app/components/design/design-tools.ts",
@@ -33,10 +35,12 @@
     "./client/app/components/form/select-menu.ts",
     "./client/app/components/form/slider.ts",
     "./client/app/components/form/time-picker.ts",
+    "./client/app/components/marketing/index.ts",
     "./client/app/components/reservation/filter.ts",
     "./client/app/components/reservation/reservation-modal.ts",
     "./client/app/components/reservation/reservation.ts",
     "./client/app/components/reservations/reservations.ts",
+    "./client/app/components/user/change-password.ts",
     "./client/app/components/user/login.ts",
     "./client/app/components/user/recover-password.ts",
     "./client/app/components/user/register-success.ts",
