--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "express-session": "^1.13.0",
     "fs": "0.0.2",
     "gulp-file": "^0.2.0",
-    "ionic-framework": "2.0.0-alpha.55",
+    "ionic-framework": "2.0.0-beta.1",
     "ionicons": "3.0.0-alpha.3",
     "jasmine": "^2.4.1",
     "jquery": "^2.1.4",
